shopping/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    name: myingress
spec:
  rules:
  - host: shopping.thecloudsavvy.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shopping-service
            port:
              number: 80
  - host: phpmyadmin.thecloudsavvy.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80                               

  tls:
      - hosts:
          - shopping.thecloudsavvy.online
          - phpmyadmin.thecloudsavvy.online
        secretName: tls-2048-bloggin
